--- a/BoardOracle/src/main/resources/templates/board/list.html
+++ b/BoardOracle/src/main/resources/templates/board/list.html
@@ -30,6 +30,12 @@
 </head>
 
 <body>
+	<script>
+		const userid = '[[${session.userid}]]';
+		if(userid=='') {
+			document.location.href='/';
+		}
+	</script>
 
     <div class="main">
 
