--- a/BoardOracle/src/main/resources/templates/board/write.html
+++ b/BoardOracle/src/main/resources/templates/board/write.html
@@ -262,6 +262,12 @@
 </head>
 
 <body>
+	<script>
+		const userid = '[[${session.userid}]]';
+		if(userid=='') {
+			document.location.href='/';
+		}
+	</script>
 
     <div class = "main">
         <img src="/images/logo.jpg" class="topBanner"><br>
