--- a/BoardOracle/src/main/resources/templates/master/sysManage.html
+++ b/BoardOracle/src/main/resources/templates/master/sysManage.html
@@ -76,7 +76,7 @@
 			<li><a href="">사용자통계</a>
 				<ul class="sub_menu">
 					<li><a href="#">전체 회원 숫자</a></li>
-					<li><a href="#">게시물 갯수</a></li>
+					<li><a href="/master/numberPost">게시물 갯수</a></li>
 					<li><a href="#">댓글 갯수</a></li>
 				</ul>
 			</li>
