--- a/BoardOracle/src/main/resources/templates/member/memberInfo.html
+++ b/BoardOracle/src/main/resources/templates/member/memberInfo.html
@@ -43,6 +43,12 @@
 </script>
 
 <body>
+	<script>
+		const userid = '[[${session.userid}]]';
+		if(userid=='') {
+			document.location.href='/';
+		}
+	</script>
 
 
 	<div class="boardView">
@@ -73,6 +79,7 @@
        <a href="/board/list?page=1">처음으로</a>&nbsp;&nbsp;
        <a href="/member/memberInfoModify">사용 정보 변경</a>&nbsp;&nbsp;
        <a href="/member/memberPasswordModify">비밀번호 변경</a>&nbsp;&nbsp;
+       <a href="/member/memberWithdraw">회원 탈퇴</a>&nbsp;&nbsp;
        <a href="javascript:logout()">로그아웃</a>&nbsp;&nbsp;
    </div>
 </body>
