--- a/BoardOracle/src/main/resources/templates/member/memberInfoModify.html
+++ b/BoardOracle/src/main/resources/templates/member/memberInfoModify.html
@@ -7,13 +7,23 @@
     
 </head>
 <body>
+	<script>
+		const userid = '[[${session.userid}]]';
+		if(userid=='') {
+			document.location.href='/';
+		}
+	</script>
 	<div class="main">
 		<h1>회원 등록</h1><br>
-		<div class="WriteForm">
+		
+		<div th:each="memberInfo:${memberInfo}" class="WriteForm">
+		
 			<form id="RegistryForm" name="RegistryForm" method="POST" enctype="multipart/form-data">
 				<br><br>
 				<input type="file" name="fileUpload" id="imageFile" style="display:none">
-				<div class="imageZone" id="imageZone"><span>이미지 수정을 원하시면 화면을 클릭해 주세요.</span></div>
+				<div class="imageZone" id="imageZone">
+				<img th:src="@{'/profile/' + ${memberInfo.stored_filename}}" id="imageFile1" style="display:block; width:80%; height:auto; margin:auto;" >
+				<span>이미지 수정을 원하시면 화면을 클릭해 주세요.</span></div>
 				
 				<span id="idCheckNotice"></span>
 				<div style="width:90%; text-align:left; position:relative; left: 35px; border-bottom: 2px solid #adadad; margin: 10px; padding:10px;">
@@ -44,7 +54,7 @@
 				<input type="text" id="email" class="input_field" name="email" placeholder="이메일 주소를 입력하세요.">
 				<textarea class="input_content" id="description" cols="100" rows="500" name="description" placeholder="자기 소개를 입력해 주세요">
 				</textarea><br>
-				<input type="button" id="btnRegister" class="btn_write" value="수정"><br><br>
+				<input type="button" id="btnRegister" class="btn_write" value="수정" onclick="MemberInfoModify()"><br><br>
 				<input type="button" class="btn_cancle" value="취소" onclick="history.back()">
  			</form>
 		</div>
@@ -53,6 +63,27 @@
 	<script>
     	// 전처리 작업이 실무의 40% 차지함
     	window.onload = () => {
+    		
+    		
+    		const check = [
+    				['gender','[[${memberInfo.gender}]]'],
+    				['hobby','[[${memberInfo.hobby}]]'],
+    		]
+    		check.forEach((element) => {
+    			console.log(element[0],element[1]);
+    		    for(let i=0; i<document.getElementsByName(element[0]).length; i++) {
+    		        if(document.getElementsByName(element[0])[i].value === element[1])
+    		            document.getElementsByName(element[0])[i].checked = true;
+    		    }
+    		});
+    		document.getElementsByName('job')[0].value = '[[${memberInfo.job}]]';
+    		document.querySelector('#zipcode').value = '[[${memberInfo.zipcode}]]';
+    		document.querySelector('#addr1').value = '[[${memberInfo.address}]]';
+    		document.querySelector('#telno').value = '[[${memberInfo.telno}]]';
+    		document.querySelector('#email').value = '[[${memberInfo.email}]]';
+    		document.querySelector('#description').value = '[[${memberInfo.description}]]';
+    		
+    	
    			var imgCheck = "N";
    			var imgZone = document.querySelector('#imageZone');
    			var fileEvent = document.querySelector('#imageFile');
@@ -189,19 +220,20 @@
    			});	
     	}
     		
-		const SignUp = async () => { 
+		const MemberInfoModify = async () => { 
+			address.value = addr1.value + " " + addr2.value;
 		   	const formData = new FormData(RegistryForm);
 
-			await fetch('/member/signup', {
+			await fetch('/member/memberInfoModify', {
 				method: 'POST',
 				body: formData
 			}).then((response) => response.json())
 				.then((data) => {
 				if(data.message == 'GOOD') {
-					alert(decodeURIComponent(data.username) + '님, 회원 가입을 축하 드립니다.');
-					document.location.href='/board/list?page=1';
+					alert(decodeURIComponent(data.username) + '님, 회원 수정이 완료 되었습니다.');
+					document.location.href='/member/memberInfo'; 
 				} else {
-					alert("서버 장애로 회원 가입에 실패했습니다")
+					alert("서버 장애로 회원 수정에 실패했습니다")
 				}
 			}).catch((error) => {
 				console.log("error = " + error);
