--- a/BoardOracle/src/main/resources/templates/member/memberInfo.html
+++ b/BoardOracle/src/main/resources/templates/member/memberInfo.html
@@ -79,7 +79,7 @@
        <a href="/board/list?page=1">처음으로</a>&nbsp;&nbsp;
        <a href="/member/memberInfoModify">사용 정보 변경</a>&nbsp;&nbsp;
        <a href="/member/memberPasswordModify">비밀번호 변경</a>&nbsp;&nbsp;
-       <a href="/member/memberWithdraw">회원 탈퇴</a>&nbsp;&nbsp;
+       <a href="/member/memberWithdrawCheck">회원 탈퇴</a>&nbsp;&nbsp;
        <a href="javascript:logout()">로그아웃</a>&nbsp;&nbsp;
    </div>
 </body>
