--- a/BoardSecurity/src/main/resources/templates/board/view.html
+++ b/BoardSecurity/src/main/resources/templates/board/view.html
@@ -203,7 +203,7 @@
     		const data = {
    				replywriter: replywriter.value,
    				replycontent: replycontent.value,
-   				userid: userid.value,
+   				userid: '[[${session.userid}]]',
    				seqno: seqno.value
     		}
     		
