--- a/BoardOracle/src/main/resources/templates/master/sysManage.html
+++ b/BoardOracle/src/main/resources/templates/master/sysManage.html
@@ -77,7 +77,7 @@
 				<ul class="sub_menu">
 					<li><a href="#">전체 회원 숫자</a></li>
 					<li><a href="/master/numberPost">게시물 갯수</a></li>
-					<li><a href="#">댓글 갯수</a></li>
+					<li><a href="/master/numberReply">댓글 갯수</a></li>
 				</ul>
 			</li>
 			<li><a href="">첨부파일</a></li>
