--- a/BoardJPA/src/main/resources/templates/board/modify.html
+++ b/BoardJPA/src/main/resources/templates/board/modify.html
@@ -279,7 +279,7 @@
                 <input type="hidden" id="seqno" name="seqno" th:value="${view.seqno}">
                 <input type="hidden" id="page" name="page" th:value="${page}">
                 <input type="hidden" id="keyword" name="keyword" th:value="${keyword}">
-                <input type="hidden" name="userid" th:value="${session.userid}">
+                <input type="hidden" name="email" th:value="${session.email}">
                 <input type="hidden" name="writer" th:value="${session.username}">
                 <br><br>
                 <textarea id="content" class="input_content" cols="100" rows="500" name="content" th:text="${view.content}"></textarea>
