--- a/BoardJPA/src/main/resources/templates/board/write.html
+++ b/BoardJPA/src/main/resources/templates/board/write.html
@@ -271,7 +271,7 @@
             <form class="WriteForm" name="WriteForm" method="post">
                 <input type="text" id="writer" class="items" name="writer" th:value="|작성자 : ${session.username}|" th:disabled="disabled" />
                 <input type="text" id="title" class="items" name="title" placeholder="제목을 입력하세요">
-                <input type="hidden" name="userid" th:value="${session.userid}"> 
+                <input type="hidden" name="email" th:value="${session.email}"> 
                 <input type="hidden" name="writer" th:value="${session.username}">
                 <br><br>
                 <textarea id="content" cols="100" rows="500" name="content" placeholder="내용을 입력하세요"></textarea>
