--- a/BoardJPA/src/main/resources/templates/member/memberPasswordModify.html
+++ b/BoardJPA/src/main/resources/templates/member/memberPasswordModify.html
@@ -76,12 +76,12 @@
 	
 	const logout = () => {
 		let authkey = getCookie('authkey');
-		let userid = getCookie('userid');
+		let email = getCookie('email');
 		let password = getCookie('password');
 		if(authkey != undefined)
 			document.cookie = 'authkey=' + authkey + ";path=/;max-age=0";
-		if(userid != undefined)
-			document.cookie = 'userid=' + authkey + ";path=/;max-age=0";
+		if(email != undefined)
+			document.cookie = 'email=' + authkey + ";path=/;max-age=0";
 		if(password != undefined)
 			document.cookie = 'password=' + authkey + ";path=/;max-age=0";
 			
