--- a/BoardOracle/src/main/resources/templates/master/numberPost.html
+++ b/BoardOracle/src/main/resources/templates/master/numberPost.html
@@ -3,6 +3,36 @@
 <head>
 <meta charset="UTF-8">
 <title>게시물 수</title>
+ <style>
+        body {
+		    font-family: Arial, sans-serif;
+		    margin: 0;
+		    padding: 0;
+		    background-color: #f9f9f9;
+		}
+		
+		table {
+		    width: 80%;
+		    margin: 20px auto;
+		    border-collapse: collapse;
+		    background-color: #fff;
+		    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+		}
+		
+		th, td {
+		    border: 1px solid #eee; 
+		    padding: 12px;
+		    text-align: left;
+		}
+		
+		th {
+		    background-color: aliceblue;
+		}
+		
+		th:first-child, td:first-child {
+		    text-align: center;
+		}
+	</style>
 </head>
 <body>
    <table border="1">
