--- a/BoardOracle/src/main/resources/templates/master/sysManage.html
+++ b/BoardOracle/src/main/resources/templates/master/sysManage.html
@@ -75,12 +75,12 @@
 			<li><a href="/board/list?page=1">홈으로</a></li>
 			<li><a href="">사용자통계</a>
 				<ul class="sub_menu">
-					<li><a href="#">전체 회원 숫자</a></li>
+					<li><a href="/master/memberCount">전체 회원 숫자</a></li>
 					<li><a href="/master/numberPost">게시물 갯수</a></li>
 					<li><a href="/master/numberReply">댓글 갯수</a></li>
 				</ul>
 			</li>
-			<li><a href="">첨부파일</a></li>
+			<li><a href="/master/fileList">첨부파일</a></li>
 			<li><a href="">게시판관리</a></li>
 			<li><a href="">시스템정보</a></li>
 		</ul>
