--- a/BoardJPA/src/main/resources/templates/member/logout.html
+++ b/BoardJPA/src/main/resources/templates/member/logout.html
@@ -9,7 +9,7 @@
 	<br><br>
 	<div id="main">
 		<div id="LogoutView">
-			<h1>로그아웃하였습니다. <span th:text="|${userid} ${username}|"></span>님 안녕히 가세요.</h1>
+			<h1>로그아웃하였습니다. <span th:text="|${email} ${username}|"></span>님 안녕히 가세요.</h1>
 			<h1>다시 로그인 하실려면 <a href="/">여기</a>를 클릭해 주세요</h1>
 		</div>
 	</div>
