--- a/BoardJPA/src/main/resources/templates/member/searchPassword.html
+++ b/BoardJPA/src/main/resources/templates/member/searchPassword.html
@@ -9,9 +9,9 @@
 </style>
 <script>
 const pwSearchCheck = async () => {
-	if(userid.value == '') {
+	if(email.value == '') {
 		alert('아이디를 입력하세요');
-		userid.focus();
+		email.focus();
 		return false;
 	}
 	if(telno.value == '') {
@@ -54,7 +54,7 @@ const pwSearchCheck = async () => {
 				<form name="pwSearchForm" id="pwSearchForm" class="pwSearchForm" method="POST">		
 					<h1>비밀번호 발급</h1>
 					<div class="pwSearchFormDivision">
-						<input type="text" id="userid" name="userid" class="input_field" placeholder="아이디를 입력하세요" >
+						<input type="text" id="email" name="email" class="input_field" placeholder="이메일을 입력하세요" >
 						<input type="text" id="telno" name="telno" class="input_field" onkeydown="press(this.form)" placeholder="전화번호를 입력하세요" >
 						 <input type="button" id="btn_pwSearch" class="btn_write" value="임시 패스워드 발급" onclick="pwSearchCheck()">
 				        <input type="button" class="btn_cancel" value="홈으로" onclick="javascript:location.href='/'">
